--- a/stylesheets/timeline.css
+++ b/stylesheets/timeline.css
@@ -30,6 +30,10 @@ Modules - reusable parts of our design
   max-width: 1170px;
   margin: 0 auto;
 }
+
+.cd-container h2 {
+    font-size: 20px !important;
+}
 .cd-container::after {
   /* clearfix */
   content: '';
